fix: character position and add overflow

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,13 +1,15 @@
 .characterEditor {
+  position: relative;
   padding-top: 128px;
   padding-bottom: 64px;
 }
 
-.maxWidthWrapper {
+.maxWidthWrapper {  
 }
 
 .header {
   padding-bottom: 64px;
+  max-width: 65%;
 }
 
 .title {
@@ -24,6 +26,12 @@
 }
 
 .characterWrapper {
+  position: fixed;    
+  top: 60px;
+  /* left: 128px; */
+  right: 128px;
+  height: 800px;
+  min-width: 500px;
 }
 
 .controlColumn {
