--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -10,6 +10,9 @@
     to deal with it yet!
   */
   margin-bottom: 32px;
+  white-space: nowrap;
+  overflow-x: auto;
+  max-width: 50%;
 }
 
 .title {
